--- a/docassemble/USCISApplications/data/questions/combined_application_questions.yml
+++ b/docassemble/USCISApplications/data/questions/combined_application_questions.yml
@@ -85,6 +85,8 @@ fields:
       - users[i].address.state
       - users[i].address.country
       - users[i].address.address_type
+    default: |
+      users[0].address if i > 0 else None
   - Street address: users[i].address.address
     address autocomplete: True
     # default: ${ showifdef("users[0].address.address ") }
@@ -123,7 +125,7 @@ fields:
   - ${ users[0] }'s mailing address is: users[0].mailing_address
     datatype: object_radio
     choices:
-      - users[0].address if defined("users[0].address.address") else None
+      - users[0].mailing_address if defined("users[0].mailing_address.address") else users[0].address if defined("users[0].address.address") else None
     object labeler: |
       lambda y: y.on_one_line()
     none of the above: |
@@ -132,6 +134,8 @@ fields:
     show if:
       code: |
         defined("users[0].address.address")
+    default: |
+      users[0].address
   - ${ users[0].address.address_label }: users[0].mailing_address.address
     address autocomplete: True
   - Address is a: users[0].mailing_address.address_type
@@ -160,7 +164,7 @@ fields:
   - ${ users[i] }'s mailing address is: users[i].mailing_address
     datatype: object_radio
     choices:
-      - users[0].address if defined("users[0].address.address") else None
+      - users[0].mailing_address if defined("users[0].mailing_address.address") else None
       - users[i].address if defined("users[i].address.address") else None
     object labeler: |
       lambda y: y.on_one_line()
@@ -170,6 +174,8 @@ fields:
     show if:
       code: |
         defined("users[i].address.address")
+    default: |
+      users[0].mailing_address if i > 0 else None
   - Address is a: users[i].mailing_address.address_type
     datatype: radio
     choices:
